# opsroom

./: .gitignore  INSTALL.md  README.md  pyproject.toml
go/: go.mod  main.go
go/claude/: claude.go
go/hypr/: hypr.go
go/kitty/: kitty.go
go/marionette/: marionette.go
go/ports/: ports.go
go/ui/: banner.go  card.go  cardheader.go  cardstate.go  eventlog.go  footer.go  grid.go  markdown.go  model.go  note.go  ports.go  prompt.go  scrollbar.go  slots.go  styles.go  util.go  view.go  wrap.go
src/opsroom/: app.py
src/wall/: app.py  hypr.py  kitty.py  sources.py
