[project]
name = "opsroom"
version = "0.1.0"
description = "Cybersyn-style TUI wall for every running Claude Code session."
requires-python = ">=3.12"
dependencies = [
    "textual>=0.85",
]

[project.scripts]
opsroom = "opsroom.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsroom"]
